--- a/package.json
+++ b/package.json
@@ -2,20 +2,22 @@
   "name": "opentok-react-components",
   "version": "0.0.1",
   "main": "dist/index.js",
+  "types": "./dist/index.d.ts",
   "repository": "git@github.com:adrice727/react-components.git",
   "author": "Aaron Rice <adrice727@gmail.com>",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "rm -rf dist && webpack --config webpack.config.js",
     "watch": "webpack --watch --config webpack.config.js"
   },
   "devDependencies": {
-    "@types/react": "^16.3.5",
+    "@types/react-dom": "^16.0.5",
     "@types/react-router-dom": "^4.2.6",
     "awesome-typescript-loader": "^5.0.0",
     "css-loader": "^0.28.11",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "mini-css-extract-plugin": "^0.4.0",
     "postcss": "^6.0.21",
     "postcss-loader": "^2.1.3",
     "precss": "^3.1.2",
@@ -31,7 +33,8 @@
     "typescript": "^2.9.0-dev.20180406",
     "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.5.0",
-    "webpack-cli": "^2.0.14"
+    "webpack-cli": "^2.0.14",
+    "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "react": "^16.3.1",
