--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "throwaway-react-components",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "author": "Aaron Rice <adrice727@gmail.com>",
   "license": "MIT",
   "private": false,
