--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "throwaway-react-components",
-  "version": "0.0.3",
+  "name": "opentok-react-components",
+  "version": "0.0.1",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -22,6 +22,7 @@
     "mini-css-extract-plugin": "^0.4.0",
     "postcss": "^6.0.21",
     "postcss-loader": "^2.1.3",
+    "postcss-simple-vars": "^4.1.0",
     "precss": "^3.1.2",
     "prettier": "^1.11.1",
     "source-map-loader": "^0.2.3",
@@ -32,10 +33,11 @@
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.10.0",
     "tslint-react": "^3.5.1",
-    "typescript": "^2.9.0-dev.20180406",
+    "typescript": "^2.8.1",
     "typings-for-css-modules-loader": "^1.7.0",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14",
+    "webpack-fix-default-import-plugin": "^1.0.3",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
