--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "opentok-react-components",
-  "version": "0.0.1",
+  "name": "throwaway-react-components",
+  "version": "0.0.6",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -11,21 +11,36 @@
   "private": false,
   "scripts": {
     "build": "rm -rf dist && webpack --config webpack.config.js",
-    "watch": "webpack --watch --config webpack.config.js"
+    "watch": "webpack --watch --config webpack.config.js",
+    "build-storybook": "build-storybook",
+    "storybook": "start-storybook -p 6006 -c .storybook"
   },
   "devDependencies": {
+    "@storybook/addon-info": "v4.0.0-alpha.2",
+    "@storybook/addon-knobs": "v4.0.0-alpha.2",
+    "@storybook/react": "v4.0.0-alpha.2",
+    "@types/jest": "^22.2.2",
+    "@types/material-ui": "^0.21.1",
+    "@types/node": "^9.6.4",
+    "@types/react": "^16.3.9",
     "@types/react-dom": "^16.0.5",
     "@types/react-router-dom": "^4.2.6",
+    "@types/storybook__react": "^3.0.7",
     "awesome-typescript-loader": "^5.0.0",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "jest": "^22.4.3",
+    "material-ui": "^0.20.0",
+    "material-ui-icons": "^1.0.0-beta.36",
     "mini-css-extract-plugin": "^0.4.0",
     "postcss": "^6.0.21",
     "postcss-loader": "^2.1.3",
     "postcss-simple-vars": "^4.1.0",
     "precss": "^3.1.2",
     "prettier": "^1.11.1",
+    "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "source-map-loader": "^0.2.3",
+    "storybook-addon-jsx": "^5.3.0",
     "style-loader": "^0.20.3",
     "stylelint-config-recommended": "^2.1.0",
     "ts-loader": "^4.1.0",
