--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "source-map-loader": "^0.2.3",
     "storybook-addon-jsx": "^5.3.0",
     "style-loader": "^0.20.3",
+    "stylelint": "^9.2.0",
     "stylelint-config-recommended": "^2.1.0",
     "ts-loader": "^4.1.0",
     "tslib": "^1.9.0",
