--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^16.3.9",
     "@types/react-dom": "^16.0.5",
     "@types/react-router-dom": "^4.2.6",
+    "@types/storybook__addon-info": "^3.2.2",
     "@types/storybook__react": "^3.0.7",
     "awesome-typescript-loader": "^5.0.0",
     "css-loader": "^0.28.11",
@@ -45,6 +46,7 @@
     "stylelint": "^9.2.0",
     "stylelint-config-recommended": "^2.1.0",
     "ts-loader": "^4.1.0",
+    "tsconfig-paths-webpack-plugin": "^3.0.3",
     "tslib": "^1.9.0",
     "tslint": "^5.9.1",
     "tslint-config-prettier": "^1.10.0",
