--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^16.0.5",
     "@types/react-router-dom": "^4.2.6",
     "@types/storybook__addon-info": "^3.2.2",
+    "@types/storybook__addon-knobs": "^3.3.1",
     "@types/storybook__react": "^3.0.7",
     "awesome-typescript-loader": "^5.0.0",
     "css-loader": "^0.28.11",
