--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "material-ui-icons": "^1.0.0-beta.36",
     "mini-css-extract-plugin": "^0.4.0",
     "postcss": "^6.0.21",
+    "postcss-font-magician": "^2.1.1",
     "postcss-loader": "^2.1.3",
     "postcss-simple-vars": "^4.1.0",
     "precss": "^3.1.2",
