--- a/package.json
+++ b/package.json
@@ -32,8 +32,6 @@
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jest": "^22.4.3",
-    "material-ui": "^0.20.0",
-    "material-ui-icons": "^1.0.0-beta.36",
     "mini-css-extract-plugin": "^0.4.0",
     "postcss": "^6.0.21",
     "postcss-font-magician": "^2.1.1",
@@ -41,6 +39,7 @@
     "postcss-simple-vars": "^4.1.0",
     "precss": "^3.1.2",
     "prettier": "^1.11.1",
+    "react-docgen-typescript-loader": "^2.0.3",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
     "source-map-loader": "^0.2.3",
     "storybook-addon-jsx": "^5.3.0",
