--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "jest": "^22.4.3",
     "mini-css-extract-plugin": "^0.4.0",
     "postcss": "^6.0.21",
+    "postcss-cssnext": "^3.1.0",
     "postcss-font-magician": "^2.1.1",
+    "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.3",
     "postcss-simple-vars": "^4.1.0",
     "precss": "^3.1.2",
