--- a/package.json
+++ b/package.json
@@ -28,16 +28,21 @@
     "@types/storybook__addon-info": "^3.2.2",
     "@types/storybook__addon-knobs": "^3.3.1",
     "@types/storybook__react": "^3.0.7",
+    "autoprefixer": "^8.2.0",
     "awesome-typescript-loader": "^5.0.0",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jest": "^22.4.3",
     "mini-css-extract-plugin": "^0.4.0",
     "postcss": "^6.0.21",
+    "postcss-apply": "^0.9.0",
+    "postcss-assets": "^5.0.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-font-magician": "^2.1.1",
     "postcss-import": "^11.1.0",
     "postcss-loader": "^2.1.3",
+    "postcss-mixins": "^6.2.0",
+    "postcss-nested": "^3.0.0",
     "postcss-simple-vars": "^4.1.0",
     "precss": "^3.1.2",
     "prettier": "^1.11.1",
