Add classnames dependency.

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@storybook/addon-info": "v4.0.0-alpha.2",
     "@storybook/addon-knobs": "v4.0.0-alpha.2",
     "@storybook/react": "v4.0.0-alpha.2",
+    "@types/classnames": "^2.2.3",
     "@types/jest": "^22.2.2",
     "@types/material-ui": "^0.21.1",
     "@types/node": "^9.6.4",
@@ -30,6 +31,7 @@
     "@types/storybook__react": "^3.0.7",
     "autoprefixer": "^8.2.0",
     "awesome-typescript-loader": "^5.0.0",
+    "classnames": "^2.2.5",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jest": "^22.4.3",
