Cleanup. Minor improvements.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/storybook__react": "^3.0.7",
     "autoprefixer": "^8.2.0",
     "awesome-typescript-loader": "^5.0.0",
+    "copy-to-clipboard": "^3.0.8",
     "css-loader": "^0.28.11",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "jest": "^22.4.3",
@@ -52,6 +53,7 @@
     "style-loader": "^0.20.3",
     "stylelint": "^9.2.0",
     "stylelint-config-recommended": "^2.1.0",
+    "sweetalert2": "^7.19.0",
     "ts-loader": "^4.1.0",
     "tsconfig-paths-webpack-plugin": "^3.0.3",
     "tslib": "^1.9.0",
