--- a/.stylelintrc
+++ b/.stylelintrc
@@ -3,6 +3,9 @@
   "syntax": "scss",
   "rules": {
     "selector-nested-pattern": "^&",
-    "no-descending-specificity": true
-  }
+    "no-descending-specificity": true,
+    "declaration-block-no-duplicate-properties": [ true, {
+      "ignore": ["consecutive-duplicates"]
+    }],
+  },
 }
